--- a/public/css/login.css
+++ b/public/css/login.css
@@ -89,11 +89,8 @@
   color: #EF3B3A;
 }
 body {
-  background-image:url('/public/images/background.jpg');
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+  background-image:url('/images/background.jpg');
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
